# fallow

./: .clippy.toml  .fallowrc.json  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  _typos.toml  action.yml  package-lock.json  package.json  plugin-schema.json  schema.json
.agents/: README.md
.claude/: settings.json
.claude/agents/: cli-output-reviewer.md  json-output-reviewer.md
.claude/hooks/: pre-bash-guard.py
.claude/rules/: cli-crate.md  comments.md  core-crate.md  detection.md  lsp-server.md  mcp-server.md  plugins.md  vscode-extension.md
.githooks/: pre-commit  pre-push
.github/pages/: index.html
.github/scripts/: generate-benchmark-matrix.mjs  (+3 more)
benchmarks/: bench-ci.sh  bench-circular.mjs  bench-dupes.mjs  bench.mjs  compare.mjs  download-fixtures.mjs  package-lock.json  package.json
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: component_engine.rs  programmatic_commands.rs  programmatic_stable.rs  representative_sources.rs
crates/benchmarks/fixtures/: representative-types.ts
crates/engine/: Cargo.toml
crates/engine/benches/: dupes_detect.rs  dupes_pipeline.rs
crates/engine/src/: baseline.rs  changed_files.rs  churn.rs  core_backend.rs  cross_reference.rs  css.rs  dead_code.rs  discover.rs  discover_walk.rs  duplicates.rs  error.rs  feature_flags.rs  flags.rs  git_env.rs  guard.rs  lib.rs  module_graph.rs  plugins.rs  project_analysis.rs  project_config.rs  public_api.rs  repo_refs.rs  results.rs  security.rs  session.rs  source.rs  suppress.rs  trace.rs  trace_chain.rs  validate.rs  vital_signs.rs
crates/engine/src/health/: actions.rs  analysis_data.rs  assembly.rs  baseline_io.rs  churn_file.rs  component_rollup.rs  core_pipeline.rs  coverage_gaps.rs  coverage_intelligence.rs  coverage_settings.rs  css_analytics.rs  derived_sections.rs  execute.rs  execute_tests.rs  file_scores.rs  filters.rs  finding_sort.rs  findings.rs  findings_pipeline.rs  framework_health.rs  grouping.rs  hotspots.rs  ignore.rs  large_functions.rs  mod.rs  output_build.rs  ownership.rs  package_json.rs  pipeline.rs  react_hooks.rs  result.rs  runner.rs  runtime_sections.rs  scope.rs  scoring.rs  targets.rs  threshold_overrides.rs  timings.rs  vital_data.rs  vital_signs_scope.rs
crates/engine/src/health/css_analytics/: token_consumer_tests.rs
crates/engine/src/health/styling_score/: mod.rs  tests.rs
crates/engine/tests/: dupes_integration.rs  dupes_profile.rs  dupes_stress_test.rs
crates/napi/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.mjs
crates/napi/src/: lib.rs
crates/napi/types/: index.d.ts
decisions/: 010-v8-coverage-vs-oxc-coverage-boundary.md  README.md
docs/: backwards-compatibility.md  benchmarking.md  environment-variables.md  fallow-core-migration.md  output-schema.json  security-agent-verification.md  styling-corpus-smoke.md  styling-pr-smoke.md  styling-release-matrix.md  telemetry.md  v3-release-notes.md
scripts/: agent-files.sha256  check-benchmark-harness.py  check-comment-quality.mjs  check-comment-quality.test.mjs  generate-agent-docs.mjs  generate-agent-docs.test.mjs  generate-all.mjs  repository-policy.test.mjs  scaffold-analyzer-plan.mjs  styling-corpus-smoke.mjs  styling-pr-smoke.mjs  styling-pr-smoke.test.mjs  test-command-policy.test.mjs  vendor-skills.mjs  vendor-skills.test.mjs  verify-repo.mjs  verify-repo.test.mjs  workflow-policy.test.mjs
(+1074 files in other folders)
