[package]
name = "fallow-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false
description = "CodSpeed benchmark suites for fallow"

[[bench]]
name = "programmatic_commands"
harness = false

[dev-dependencies]
criterion2 = { workspace = true }
fallow-cli = { workspace = true }
tempfile = { workspace = true }

[features]
codspeed = ["criterion2/codspeed"]

[lints]
workspace = true
