[package]
name = "fallow-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false
description = "CodSpeed benchmark suites for fallow"

[[bench]]
name = "programmatic_commands"
harness = false

[[bench]]
name = "programmatic_stable"
harness = false

[[bench]]
name = "representative_sources"
harness = false

[dev-dependencies]
criterion2 = { workspace = true }
fallow-api = { workspace = true }
fallow-core = { workspace = true }
fallow-types = { workspace = true }
tempfile = { workspace = true }

[features]
codspeed = ["criterion2/codspeed"]

[lints]
workspace = true
