[package]
name = "fallow-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Typed analysis engine facade for fallow consumers"
readme = "../../README.md"

[lib]
doctest = false

[dependencies]
fallow-config = { workspace = true }
fallow-core = { workspace = true }
fallow-extract = { workspace = true }
fallow-graph = { workspace = true }
fallow-output = { workspace = true }
fallow-types = { workspace = true }
colored = { workspace = true }
dunce = { workspace = true }
globset = { workspace = true }
oxc_coverage_instrument = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true }

[features]
schema = ["fallow-output/schema", "fallow-types/schema"]

[dev-dependencies]
oxc_span = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
