[package]
name = "fallow-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Node.js bindings for fallow: deterministic codebase intelligence (quality, risk, duplication, architecture, dependencies, cleanup) for TypeScript and JavaScript"
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
fallow-api = { workspace = true }
napi = { version = "3", features = ["serde-json", "tokio_rt"] }
napi-derive = "3"
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
  "napi-build", # used from build.rs to emit NAPI build metadata; cargo-machete can miss build-script-only deps
]
